src/App.css
 * {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
} 

.App-backgroundImage {
max-width: 100%;
height: 100%;
background-size: cover;
background-repeat: no-repeat;
opacity: 0.5;

}
 .background-container {
 height: 100%;
  width: 100%;
  background-color: black;
} 

.background {
 
  position: relative;
  text-align: center;
  color: white;
}
.centered {
  position: absolute;
  
  height: 50%;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
}
/* navbar menu button */
.navbar-expand-xl {
  padding-top: 0px;
  padding-bottom: 0px;
}
.navbar-toggler-icon {
  height: 1.5em;
  width: 1.5em;
}
.navbar-toggler:focus {
  box-shadow: white;
}
.navbar-nav, .me-auto {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 0px;
  margin-top: 10px;
  margin-bottom: 0;
  list-style: none;
  
}
.me-auto {
  align-items: center;
}
.navbar-collapse {
  flex-grow: 0!important;
}
.navbar-nav {
  font-size: 20px;
}
/* Cards */
.card-body {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}
/*TextOffer*/
.text-container {
  background-color: white;
}
/*CarouselText*/
.carousel-text {
  display: flex;
  justify-content: center;
  background-color: black;
  color: white;
  text-align: center;
  height:90%;
  width: auto;
  border-radius: 0;
  font-weight: bold;
}

@media screen and (min-width: 600px) {
  .App-backgroundMobile{
    display: none;
  }
}
 @media screen and (max-width: 480px) {
   .App-backgroundImage {
    display: none;
    height: 100vh;
   
  } 

  .mobile-container{
    min-width: 100%;

  }
  .App-backgroundMobile {
    background-size: contain;
    background-repeat: no-repeat;
    padding-bottom: 67px;
    width: 100%;
    padding-left: 8px;
    }
    .logo-mono {
      display: none;
    }
}

